added cat table