@@ -13,8 +13,6 @@ add a sub category?
 add an account attribute
 
 bugs:
-accessible: module javafx.controls does not "opens javafx.scene.control.skin" to unnamed module @17fb3970
-VM arg --add-opens?
 
 
 piechart colours
